Виправлено невеликі помилки

--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -24,55 +24,55 @@
                 <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
             </nav>
             <div class="row count-list">
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Аргентина</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Болгария</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Великобритания</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3">
                     <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Германия</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3">
                     <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Греция</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3">
                     <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Дания</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Египет</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Италия</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Канада</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Норвегия</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>США</figcaption>
                 </figure>
-                <figure class="col-xs-6 col-md-3 sign">
+                <figure class="col-xs-6 col-md-3 ">
                     <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Франция</figcaption>
                 </figure>
-                <figure class="col-xs-12 col-md-12 sign">
+                <figure class="col-xs-12 col-md-12 ">
                     <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
                     <figcaption>Япония</figcaption>
                 </figure>
