--- a/econom-tour-2021/index.html
+++ b/econom-tour-2021/index.html
@@ -15,6 +15,9 @@
         <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
             <h1>ЕКОНОМ ТУР 2021</h1>
         </header>
+    </div>
+    <div class="container">
+
         <nav id="nav">
             <a href="index.html">Главная</a>
             <a href="countries.html">Страны</a>
