Допрацьовано борги по сайту

--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -12,76 +12,82 @@
 </head>
 
 <body>
-    <div class="container-fluite">
-        <div class="jumbotron">
-            <header class=" mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
-                <h1>ЕКОНОМ ТУР 2021</h1>
-            </header>
-            <nav id="nav">
-                <a href="index.html">Главная</a>
-                <a href="countries.html">Страны</a>
-                <a href="contact.html">Контакты</a>
-                <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
-            </nav>
-            <div class="row count-list">
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Аргентина</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Болгария</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Великобритания</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3">
-                    <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Германия</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3">
-                    <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Греция</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3">
-                    <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Дания</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Египет</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Италия</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Канада</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Норвегия</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>США</figcaption>
-                </figure>
-                <figure class="col-xs-6 col-md-3 ">
-                    <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Франция</figcaption>
-                </figure>
-                <figure class="col-xs-12 col-md-12 ">
-                    <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-                    <figcaption>Япония</figcaption>
-                </figure>
+    <div class="jumbotron">
+        <header style="text-align: center;">
+            <h1>ЕКОНОМ ТУР 2021</h1>
+        </header>
+    </div>
+    <div class="container">
+        <nav class="navbar navbar-inverse text-center">
+            <div class="container-fluite">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Главная</a></li>
+                    <li class="active"><a href="countries.html">Страны</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
+                    <li><a href="forma.html">Заявка на тур</a></li>
+                </ul>
             </div>
-
-            <footer>
-                <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
-            </footer>
+        </nav>
+    </div>
+    <div class="container">
+        <div class="row">
+            <figure class="col-xs-4 col-md-3 ">
+                <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Аргентина</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3 ">
+                <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Болгария</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-md-3 ">
+                <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Великобритания</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3">
+                <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Германия</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-md-3">
+                <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Греция</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3">
+                <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Дания</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-md-3 ">
+                <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Египет</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3 ">
+                <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Италия</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-md-3 ">
+                <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Канада</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3 ">
+                <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Норвегия</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-md-3 ">
+                <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>США</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-3 ">
+                <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Франция</figcaption>
+            </figure>
+            <figure class="col-xs-4 col-xs-offset-3 col-md-12 ">
+                <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                <figcaption>Япония</figcaption>
+            </figure>
         </div>
+
+        <footer>
+            <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+        </footer>
     </div>
 </body>
 
