--- a/econom-tour-2021/index.html
+++ b/econom-tour-2021/index.html
@@ -12,20 +12,25 @@
 
 <body>
     <div class="jumbotron">
-        <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
+        <header style="text-align: center;">
             <h1>ЕКОНОМ ТУР 2021</h1>
         </header>
     </div>
     <div class="container">
-
-        <nav id="nav">
-            <a href="index.html">Главная</a>
-            <a href="countries.html">Страны</a>
-            <a href="contact.html">Контакты</a>
-            <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
+        <nav class="navbar navbar-inverse text-center">
+            <div class="container-fluite">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Главная</a></li>
+                    <li><a href="countries.html">Страны</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
+                    <li><a href="forma.html">Заявка на тур</a></li>
+                </ul>
+            </div>
         </nav>
+    </div>
+    <div class="container">
         <div class=" row">
-            <div class="col-xs-6 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-8 col-md-9">
                 <header>
                     <h2>Новость 1</h2>
                 </header>
@@ -76,33 +81,35 @@
                     eu ex incididunt quis ad cupidatat sunt.</p>
 
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-3">
-                <link type="text/css" rel="stylesheet" href="https://www.meteoprog.ua/css/winformer.min.css?id=100">
+            <aside class="d-none d-sm-block">
+                <div class="col-sm-4 col-md-3 d-none d-sm-block">
+                    <link type="text/css" rel="stylesheet" href="https://www.meteoprog.ua/css/winformer.min.css?id=100">
 
-                <div class="meteoprog-informer" data-params='{"city_ids":"2533,2650,2696","domain":"https://www.meteoprog.ua","id":"6086758c2bac921c528b458b","lang":"ru"}'>
-
-
-                    <a title="Погода в городе Киев" target="_blank" href="https://www.meteoprog.ua/weather/Kyiv">
-                        <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
-                    </a>
-                    <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Kyiv/">Погода на 2 недели</a>
-
-                    <a title="Погода в городе Львов" target="_blank" href="https://www.meteoprog.ua/weather/Lviv">
-                        <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
-                    </a>
-                    <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Lviv/">Погода на 2 недели</a>
-
-                    <a title="Погода в городе Одесса" target="_blank" href="https://www.meteoprog.ua/weather/Odesa">
-                        <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
-                    </a>
-                    <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Odesa/">Погода на 2 недели</a>
+                    <div class="meteoprog-informer" data-params='{"city_ids":"2533,2650,2696","domain":"https://www.meteoprog.ua","id":"6086758c2bac921c528b458b","lang":"ru"}'>
 
 
-                    <a class="constructor__metlink" target="_blank" href="https://www.meteoprog.ua">
-                        <img style="display: block; margin: 0 auto;" alt="Meteoprog" src="https://www.meteoprog.ua/images/meteoprog-inf.png">
-                    </a>
+                        <a title="Погода в городе Киев" target="_blank" href="https://www.meteoprog.ua/weather/Kyiv">
+                            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+                        </a>
+                        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Kyiv/">Погода на 2 недели</a>
+
+                        <a title="Погода в городе Львов" target="_blank" href="https://www.meteoprog.ua/weather/Lviv">
+                            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+                        </a>
+                        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Lviv/">Погода на 2 недели</a>
+
+                        <a title="Погода в городе Одесса" target="_blank" href="https://www.meteoprog.ua/weather/Odesa">
+                            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+                        </a>
+                        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Odesa/">Погода на 2 недели</a>
+
+
+                        <a class="constructor__metlink" target="_blank" href="https://www.meteoprog.ua">
+                            <img style="display: block; margin: 0 auto;" alt="Meteoprog" src="https://www.meteoprog.ua/images/meteoprog-inf.png">
+                        </a>
+                    </div>
                 </div>
-            </div>
+            </aside>
         </div>
         <script type="text/javascript" src="https://www.meteoprog.ua/js/winformer.min.js?id=100"></script>
         <footer>
