--- a/econom-tour-2021/forma.html
+++ b/econom-tour-2021/forma.html
@@ -11,20 +11,24 @@
 </head>
 
 <body>
-    <div class="container-fluite">
-        <div class="jumbotron">
-            <header class=" mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
-                <h1>ЕКОНОМ ТУР 2021</h1>
-            </header>
-        </div>
+    <div class="jumbotron">
+        <header style="text-align: center;">
+            <h1>ЕКОНОМ ТУР 2021</h1>
+        </header>
     </div>
     <div class="container">
-        <nav id="nav">
-            <a href="index.html">Главная</a>
-            <a href="countries.html">Страны</a>
-            <a href="contact.html">Контакты</a>
-            <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
+        <nav class="navbar navbar-inverse text-center">
+            <div class="container-fluite">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="countries.html">Страны</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
+                    <li class="active"><a href="forma.html">Заявка на тур</a></li>
+                </ul>
+            </div>
         </nav>
+    </div>
+    <div class="container">
         <div class="row">
             <div style="padding-top: 40px;" class="col-xs-8 col-xs-offset-2 col-sm-offset-3 col-sm-6 col-md-offset-3 col-md-6">
                 <form class="form-horizontal">
